@startuml

!define ENTITY class
!define TABLE_OF_CONTENTS class

PACKAGE "Gym Management System" {
    ENTITY User {
        +user_id: int (PK)

        first_name: string
        last_name: string
        password: string
        email: string
        credit: int

        created_at: datetime
        deleted_at: datetime
    }

    ENTITY Membership {
        +membership_id: int (PK)
        type: EventType
        duration_days: int
        entries: int
        price: int

        created_at: datetime
        deleted_at: datetime
    }

    ENTITY UserMembership {
        +user_membership_id: int (PK)
        -user_id: int (FK)
        -membership_id: int (FK)
        valid_from: datetime
        valid_to: datetime
        entries: int

        created_at: datetime
        deleted_at: datetime
    }

    ENTITY Entry {
        +entry_id: int (PK)
        -user_id: int (FK)
        -event_id: int (FK)
        -membership_id: int (FK)

        created_at: datetime
        deleted_at: datetime
    }

    ENTITY Event {
        +event_id: int (PK)
        type: EventType
        title: string
        start: datetime
        end: datetime
        capacity: int
        price: int

        created_at: datetime
        deleted_at: datetime
    }

    ENTITY EventType {
        open_gym
        lecture
        all
    }

    User "1"--"n" Entry : > Makes
    Event "1"--"n" Entry : > Has
    UserMembership "1"--"n" Entry : < Paid By
    UserMembership "n"--"1" Membership : > is instance of
    User "1"--"n" UserMembership : > Has
}

@enduml
